# hello_package

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
hello_package/: __init__.py  main.py  server.py
tests/: test_main.py  test_server.py
